# group-watch-bot

./: README.md
node/: .gitignore  package-lock.json  package.json  tsconfig.json
node/src/: commands.ts  group-watch-bot.spec.ts  group-watch-bot.ts  index.ts  rest-commands.ts  util.ts
node/src/commands/: command.interface.ts  countdown.spec.ts  countdown.ts
node/src/util/: util.spec.ts  util.ts
rust/: Cargo.toml
rust/src/: main.rs
rust/src/commands/: countdown.rs  mod.rs
