[package]
name = "group-watch-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.serenity]
default-features = false
features = [
    # "builder",
    "client",
    # "framework",
    "gateway",
    # "http",
    "model",
    "rustls_backend",
    # "standard_framework",
	# "unstable_discord_api",
    # "utils",
]
version = "0.11.2"
